# G44

./: .gitignore  README.md  Ruggine Presentazione.pptx
client/: AuthProvider.jsx  index.html  package-lock.json  package.json
client/ruggine_fe/: index.html  package-lock.json  package.json  vite.config.js
client/ruggine_fe/src/: App.jsx  main.jsx
client/ruggine_fe/src/API/: API.mjs
client/ruggine_fe/src/api/: client.js
client/ruggine_fe/src/components/: AuthComponents.jsx  CreateGroup.jsx  DefaultLayout.jsx  Home.jsx  InvitationModal.jsx  NavHeader.jsx  UserSelect.jsx
client/ruggine_fe/src/hooks/: NotificationsProvider.jsx  useAuth.jsx  useGroups.jsx
client/ruggine_fe/src/pages/: Home.jsx  (+1 more)
client/src/: main.jsx
client/src/api/: client.js
client/src/app/: App.jsx  routes.jsx
client/src/hooks/: GroupsProvider.jsx  NotificationsProvider.jsx  useAuth.jsx  useGroups.jsx
client/src/pages/: Home.jsx  LoginPage.jsx
server/: .env  Cargo.toml  README.md  cpu_log.txt
server/data/: ruggine.db
server/migrations/: 0001_init.sql  0002_seed_users.sql
server/ruggine_be/: .env  .gitignore  Cargo.toml
server/ruggine_be/data/: ruggine.db  ruggine.db-shm  ruggine.db-wal
server/ruggine_be/migrations/: 0001_init.sql
server/ruggine_be/src/: auth.rs  error.rs  main.rs  state.rs
server/ruggine_be/src/routes/: chats.rs  groups.rs  messages.rs  mod.rs  requests.rs  sessions.rs  users.rs  ws.rs
server/src/: auth.rs  cpu.rs  error.rs  main.rs  state.rs
server/src/routes/: chats.rs  dto.rs  messages.rs  mod.rs  requests.rs  sessions.rs  users.rs  ws.rs
(+17 files in other folders)
